# KdeLearningAid

./: ChangeLog  NEWS  README  configure  configure.in
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
src/: Makefile.am  Makefile.in  klaid.cpp  klaid.desktop  klaid.h  klaidui.rc  klaidwidget.cpp  klaidwidget.h  klaidwidgetbase.ui  main.cpp  rndclass.cpp  rndclass.h  ver.h
